Fix issue with add/remove term icons not visible in collapsible facet

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -1,13 +1,54 @@
 @import 'variables';
 
-section#search-view {
+#search-view {
   padding-top: 40px;
 
   #search-panel {
-    .category + .category {
-      margin-top: 20px;
+  }
+
+  #search-results {
+    .spinner {
+      margin: 40px;
     }
 
+    ol {
+      margin: 0px;
+
+      li blockquote em {
+        background: $infoBackground;
+        color: $infoText;
+      }
+
+      li + li {
+        margin: 20px 0px;
+        padding-top: 10px;
+        border-top: 1px solid $grayLighter;
+      }
+
+      li:last-child {
+        margin-bottom: 0px;
+      }
+    }
+  }
+}
+
+.facet {
+  & + .facet {
+    margin-top: 20px;
+  }
+  
+  h4 {
+    i {
+      // TODO
+    }
+  }
+  
+  .facet-content {
+    position: relative;
+    
+    left: -20px;
+    padding-left: 20px;
+    
     li {
       position: relative;
 
@@ -51,31 +92,6 @@ section#search-view {
         &:hover {
           color: $linkColorHover;
         }
-      }
-    }
-  }
-
-  #search-results {
-    .spinner {
-      margin: 40px;
-    }
-
-    ol {
-      margin: 0px;
-
-      li blockquote em {
-        background: $infoBackground;
-        color: $infoText;
-      }
-
-      li + li {
-        margin: 20px 0px;
-        padding-top: 10px;
-        border-top: 1px solid $grayLighter;
-      }
-
-      li:last-child {
-        margin-bottom: 0px;
       }
     }
   }
